# axum-tut-jc

./: Cargo.toml  README.md  env
db/: db.sqlite
src/: context.rs  database.rs  error.rs  lib.rs  log.rs  main.rs  model.rs
src/migrations/: tickets_table.sql
src/model/: tickets.rs
src/web/: controller.rs  hello.rs  local.rs  login.rs  mod.rs  tickets.rs
src/web/controller/: tickets.rs
src/web/middleware/: auth.rs  context.rs  mod.rs
tests/: quick_dev.rs
