[package]
name = "axum-tut"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.68"
axum = "=0.6.12"
chrono = { version = "0.4.24" }
lazy-regex = "2.5.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1", features = ["full"] }
tower-cookies = "0.9.0"
tower-http = { version = "0.4.0", features = ["fs"] }

[dev-dependencies]
anyhow = "1"
httpc-test = { version = "0.1.0", path = "../OpenSource/jeremychone/rust-httpc-test" }
